--- a/HW2_ADM_final.ipynb
+++ b/HW2_ADM_final.ipynb
@@ -46,7 +46,7 @@
       "source": [
         "# Homework 2 - Algorithmic Methods of Data Mining\n",
         "### Giorgia Fontana - \n",
-        "### Alex - \n",
+        "### Alex Onofri- \n",
         "### Braulio Villalobos - "
       ]
     },
