--- a/HW2_ADM_final (2).ipynb
+++ b/HW2_ADM_final (2).ipynb
@@ -10,7 +10,7 @@
     "# Homework 2 - Algorithmic Methods of Data Mining\n",
     "### Giorgia Fontana - \n",
     "### Alex Onofri - 1795982\n",
-    "### Braulio Villalobos - 199250"
+    "### Braulio Villalobos - 1999250"
    ]
   },
   {
